<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cons"
            android:padding="20dp"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/txtfirstName"
                android:hint="@string/enterFirstName"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:endIconMode="clear_text"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edFirstname"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/txtlastName"
                android:hint="@string/enterLastName"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtfirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edLastname"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/txtEmail"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:endIconMode="clear_text"
                android:hint="@string/enterEmail"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtlastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edemail"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPhoneNumber"
                app:startIconDrawable="@drawable/ic_baseline_call_24"
                android:hint="@string/enterPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                app:errorEnabled="true"
                app:counterMaxLength="10"
                app:prefixText="+1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/edPhoneNumber"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword1"
                android:hint="@string/choosePassword"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/edpassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="20sp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:backgroundTint="@color/blue"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txtAlreadyReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyRegistered"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp"
                android:layout_marginTop="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>