<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:padding="10dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="5dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgLogo"
            android:layout_marginEnd="50dp"
            android:transitionName="imageTrans"
            android:layout_marginTop="20dp"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/linear_layout_account"
            android:layout_marginTop="30dp"
            android:paddingBottom="30dp"
            android:elevation="5dp"
            android:id="@+id/linerAccountLayout"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo">

                <TextView
                    android:id="@+id/txtMyAccounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myAccounts"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebasneue_regular"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_marginTop="20dp"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerViewAccount"
                    android:layout_marginTop="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linerAccountLayout"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/linearAdd">

                <Button
                    android:id="@+id/btnAddSavingAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:layout_margin="10dp"
                    android:text="@string/addSavingAccount"
                    android:textSize="20sp"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                   />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>